--- a/hex.html
+++ b/hex.html
@@ -3,17 +3,25 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Color Flipper || Simple</title>
+    <title>Color Flipper || Hex</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <nav>
-      <div class="nav-center">
+      <div class="main-nav center">
         <h1>Color Flipper</h1>
-        <ul>
+        <ul class="links">
           <li><a href="./index.html">Simple</a></li>
           <li><a href="./hex.html">Hex</a></li>
         </ul>
       </div>
     </nav>
+
+    <main>
+      <div class="main-container">
+        <h2>Background Color : <span class="color">#F1f5f8</span></h2>
+        <button class="btn">click me</button>
+      </div>
+    </main>
   </body>
 </html>
