--- a/index.html
+++ b/index.html
@@ -19,9 +19,12 @@
 
     <main>
       <div class="main-container">
-        <h2>Background Color : <span class="color">#F1f5f8</span></h2>
+        <h2>Background Color : <span class="color">#FFFFFF</span></h2>
         <button class="btn">click me</button>
       </div>
     </main>
+
+    <!-- js -->
+    <script src="./app.js"></script>
   </body>
 </html>
